[tool.poetry]
name = "batch-midi"
version = "0.1.0"
description = ""
authors = ["inaba1115 <inaba1115@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mido = "^1.3.2"
superdirtpy = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"

[tool.black]
line-length = 120

[tool.poetry.group.examples.dependencies]
numpy = "1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
